# PyQt-Frameless-Window

./: pyproject.toml
examples/: acrylic_demo.py  demo.py  main_window.py  web_engine.py
qframelesswindow/linux/: __init__.py  window_effect.py
qframelesswindow/mac/: __init__.py  window_effect.py
qframelesswindow/titlebar/: __init__.py  title_bar_buttons.py
qframelesswindow/utils/: __init__.py  linux_utils.py  mac_utils.py  win32_utils.py
qframelesswindow/webengine/: __init__.py
qframelesswindow/windows/: __init__.py  window_effect.py
